// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Access Create CREATE creates role, resources and CREATE permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#create": Permission {
      "action": "create",
      "checkers": Object {
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create CREATE creates role, resources and CREATE permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#create": Permission {
      "action": "create",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "create",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "create",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create DELETE creates role, resources and DELETE permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#delete": Permission {
      "action": "delete",
      "checkers": Object {
        "static": StaticChecker {
          "action": "delete",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create DELETE creates role, resources and DELETE permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#delete": Permission {
      "action": "delete",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "delete",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "delete",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create READ creates role, resources and READ permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#read": Permission {
      "action": "read",
      "checkers": Object {
        "static": StaticChecker {
          "action": "read",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create READ creates role, resources and READ permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#read": Permission {
      "action": "read",
      "checkers": Object {
        "dynamicCheckerReject": Checker {
          "action": "read",
          "checker": [MockFunction],
          "name": "dynamicCheckerReject",
        },
        "static": StaticChecker {
          "action": "read",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create UPDATE creates role, resources and UPDATE permission 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#update": Permission {
      "action": "update",
      "checkers": Object {
        "static": StaticChecker {
          "action": "update",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;

exports[`Access Create UPDATE creates role, resources and UPDATE permission with dynamic checker 1`] = `
AccessControl {
  "_permissions": Object {
    "testResource1/testResource2#testRole#update": Permission {
      "action": "update",
      "checkers": Object {
        "dynamicCheckerResolve": Checker {
          "action": "update",
          "checker": [MockFunction],
          "name": "dynamicCheckerResolve",
        },
        "static": StaticChecker {
          "action": "update",
          "checker": [Function],
          "name": "static",
          "permission": true,
        },
      },
      "resource": Resource {
        "accessControl": [Circular],
        "children": Object {},
        "name": "testResource2",
        "parent": Resource {
          "accessControl": [Circular],
          "children": Object {
            "testResource2": [Circular],
          },
          "name": "testResource1",
          "parent": Resource {
            "accessControl": [Circular],
            "children": Object {
              "testResource1": [Circular],
            },
            "name": "",
            "parent": null,
            "path": "",
          },
          "path": "testResource1",
        },
        "path": "testResource1/testResource2",
      },
      "role": Role {
        "accessControl": [Circular],
        "name": "testRole",
      },
    },
  },
  "_resources": Resource {
    "accessControl": [Circular],
    "children": Object {
      "testResource1": Resource {
        "accessControl": [Circular],
        "children": Object {
          "testResource2": Resource {
            "accessControl": [Circular],
            "children": Object {},
            "name": "testResource2",
            "parent": [Circular],
            "path": "testResource1/testResource2",
          },
        },
        "name": "testResource1",
        "parent": [Circular],
        "path": "testResource1",
      },
    },
    "name": "",
    "parent": null,
    "path": "",
  },
  "_roles": Object {
    "testRole": Role {
      "accessControl": [Circular],
      "name": "testRole",
    },
  },
  "l": Logger {
    "className": "AccessControl",
  },
}
`;
